--- a/package.json
+++ b/package.json
@@ -1,16 +1,8 @@
 {
-  "name": "minecraft_bot",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "minecraft-data": "^3.66.0",
-    "mineflayer": "^4.20.1"
+    "async": "^3.2.6",
+    "chalk": "^4.1.2",
+    "mineflayer": "^4.20.1",
+    "proxy-agent": "^6.4.0"
   }
 }
