--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "dependencies": {
     "async": "^3.2.6",
     "chalk": "^4.1.2",
-    "mineflayer": "^4.20.1",
-    "proxy-agent": "^6.4.0"
+    "express": "^4.21.1",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "mineflayer": "^4.0.0",
+    "proxy-agent": "^6.4.0",
+    "readline": "^1.3.0",
+    "socket.io": "^4.8.0",
+    "vec3": "^0.1.10"
   }
 }
